<resources>
    <string name="app_name">Meter Installation</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kaushal Jethava</string>
    <string name="nav_header_subtitle">kaushaljethava12@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">About</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_question">SHEQ</string>
    <string name="menu_subMeter">Sub Job Cards</string>
    <string name="menu_otp">PIN </string>
    <string name="menu_meteraudit">Meter Position</string>
    <string name="menu_accessstatus">Access Status</string>
    <string name="menu_meterinformation">Meter Information</string>
    <string name="menu_meterlocation">Meter Location</string>
    <string name="menu_barcodescan">Barcode Scan</string>
    <string name="menu_auditphoto">Meter Photo</string>
    <string name="menu_siteStart">Site Start and Safety Assessment</string>
    <string name="menu_commissioningReport">Commissioning Report</string>
    <string name="menu_meterinstallation">Meter installation</string>
    <string name="menu_updateSiteDetails">Update SiteDetails</string>
    <string name="menu_signOff">Sign Off</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="toolbox">
        <item>STIHL Master ToolBox</item>
        <item>STIHL Master ToolBox</item>
        <item>STIHL Master ToolBox</item>
    </string-array>

    <string-array name="access">
        <item>Access Status</item>
        <item>No Access</item>
        <item>Full Access</item>
        <item>Access Denied</item>
        <item>Access Denied : Covid</item>
    </string-array>

    <string-array name="phase">
        <item>Select phase</item>
        <item>Single Phase </item>
        <item>Three Phase</item>

    </string-array>

    <string-array name="wire">
        <item>Select wire</item>
        <item>3 Wire</item>
        <item>4 Wire</item>

    </string-array>

    <string-array name="cts_used">
        <item>Select cts used</item>
        <item>New</item>
        <item>Existing</item>

    </string-array>

    <string-array name="ct_type">
        <item>Select ct type</item>
        <item>Ring</item>
        <item>Split Core</item>

    </string-array>

    <string-array name="meter_manufacturer">
        <item>Select Meter manufacturer</item>
        <item>Itron</item>
        <item>Hexing</item>
    </string-array>

    <string-array name="meter_model">
        <item>Select Meter model</item>
        <item>SL7000</item>
        <item>HXF300</item>

    </string-array>

    <string-array name="vt_ratio">
        <item>Select vt ratio</item>
        <item>No VTs</item>
    </string-array>

    <string-array name="ct_ratio_meter">
        <item>Select ct ratio </item>
        <item>5 : 5</item>
        <item>50 : 5</item>
        <item>75 : 5</item>
        <item>100 : 5</item>
        <item>150 : 5</item>
        <item>200 : 5</item>
        <item>250 : 5</item>
        <item>300 : 5</item>
        <item>400 : 5</item>
        <item>500 : 5</item>
        <item>600 : 5</item>
        <item>750 : 5</item>
        <item>800 : 5</item>
        <item>1000 : 5</item>
        <item>1200 : 5</item>
        <item>1250 : 5</item>
        <item>1500 : 5</item>
        <item>1600 : 5</item>
        <item>2000 : 5</item>
        <item>2500 : 5</item>
        <item>2500 : 5</item>
        <item>3000 : 5</item>
        <item>3200 : 5</item>


    </string-array>


    <string-array name="circuit_breaker_size">
        <item>Select Circuit breaker size</item>
        <item>10 A CB</item>
    </string-array>


    <string-array name="question">
        <item>Select Option</item>
        <item>yes</item>
        <item>no</item>
    </string-array>


    <string-array name="question2">
        <item>select Option</item>
        <item>yes</item>
        <item>no</item>
        <item>Not applicable</item>
    </string-array>

    <string-array name="remote_read">
        <item>select Option</item>
        <item>yes</item>
        <item>no</item>
        <item>Ontec Tech Not Available</item>
    </string-array>

    <string-array name="gprs_signal">
        <item>Select gprs signal</item>
        <item>Good</item>
        <item>Medium</item>
        <item>Bad</item>
    </string-array>

    <string-array name="jobtype">
        <item>Job Type</item>
        <item>Meter Installation</item>
        <item>Sim Swap</item>
    </string-array>

    <string-array name="reason_delay">
        <item>Reason for Delay</item>
        <item>No Access Issues</item>
        <item>Waiting for Keys</item>
        <item>Waiting for Bidvest Technician</item>
        <item>Incorrect Site Details Provided</item>
        <item>Bidvest Tech not answering the phone</item>

    </string-array>

    <string-array name="voltage">
        <item>Select Voltage</item>
        <item>230</item>
        <item>400</item>
    </string-array>

    <string-array name="mapmarker">
        <item>Pole</item>
        <item>Kiosk</item>
    </string-array>

    <string-array name="powerlimit">
        <item>Select Powerlimit</item>
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>85</item>
        <item>100</item>


    </string-array>

    <string-array name="meterstatus">
        <item>Meter Status</item>
        <item>Working</item>
        <item>not Working</item>


    </string-array>
    <string-array name="metercode">
        <item>Meter Code</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>

    </string-array>


    <string-array name="sitetype">
        <item>Site Type</item>
        <item>Business</item>
        <item>Empty House/Building</item>
        <item>Empty Plot</item>
        <item>Formal Home</item>
        <item>Holiday Home</item>
        <item>Informal Home</item>
        <item>No Electricity</item>

    </string-array>
</resources>