<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_about">

    <fragment
        android:id="@+id/nav_about"
        android:name="com.karebo2.teamapp.ui.About.AboutFragment"
        android:label="KareboTeamApp"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_nav_about_to_nav_question"
            app:destination="@id/nav_question" />
        <action
            android:id="@+id/action_nav_about_to_nav_otpscreen"
            app:destination="@id/nav_otpscreen" />
        <action
            android:id="@+id/action_nav_about_to_nav_meteraudit"
            app:destination="@id/nav_meteraudit" />
    </fragment>



    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.karebo2.teamapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_question"
        android:name="com.karebo2.teamapp.Questions"
        android:label="@string/menu_question"
        tools:layout="@layout/fragment_questions" >
        <action
            android:id="@+id/action_nav_question_to_nav_otpscreen"
            app:destination="@id/nav_otpscreen" />
    </fragment>

    <fragment
        android:id="@+id/nav_otpscreen"
        android:name="com.karebo2.teamapp.OtpScreen"
        android:label="@string/menu_otp"
        tools:layout="@layout/fragment_otp_screen" >
        <action
            android:id="@+id/action_nav_otpscreen_to_nav_meteraudit"
            app:destination="@id/nav_meteraudit" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_question"
            android:id="@+id/action_nav_otpscreen_to_nav_question"
            app:destination="@id/nav_question" />
    </fragment>





    <fragment
        android:id="@+id/nav_meteraudit"
        android:name="com.karebo2.teamapp.MeterAudit"
        android:label="@string/menu_meteraudit"
        tools:layout="@layout/fragment_meter_audit" >
        <action
            android:id="@+id/action_nav_meteraudit_to_nav_auditphoto"
            app:destination="@id/nav_auditphoto" />
        <action
            android:id="@+id/action_nav_meteraudit_to_nav_otpscreen"
            app:destination="@id/nav_otpscreen" />
        <action
            android:id="@+id/action_nav_meteraudit_self"
            app:destination="@id/nav_meteraudit" />
        <action
            android:id="@+id/action_nav_meteraudit_to_nav_accessstatus"
            app:destination="@id/nav_accessstatus" />
        <action
            android:id="@+id/action_nav_meteraudit_to_nav_subMeter"
            app:destination="@id/nav_subMeter" />
    </fragment>


    <fragment
        android:id="@+id/nav_subMeter"
        android:name="com.karebo2.teamapp.subMeter"
        android:label="@string/menu_subMeter"
        tools:layout="@layout/fragment_sub_meter" >

        <action
            android:id="@+id/action_nav_subMeter_to_nav_accessstatus"
            app:destination="@id/nav_accessstatus" />
    </fragment>


    <fragment
        android:id="@+id/nav_auditphoto"
        android:name="com.karebo2.teamapp.AuditPhoto"
        android:label="@string/menu_meteraudit"
        tools:layout="@layout/fragment_audit_photo" >
        <action
            android:id="@+id/action_nav_auditphoto_to_nav_accessstatus"
            app:destination="@id/nav_accessstatus" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_meteraudit"
            android:id="@+id/action_nav_auditphoto_to_nav_meteraudit"
            app:destination="@id/nav_meteraudit" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_about"
            android:id="@+id/action_nav_auditphoto_to_nav_about"
            app:destination="@id/nav_about" />
    </fragment>


    <fragment
        android:id="@+id/nav_accessstatus"
        android:name="com.karebo2.teamapp.AccessStatus"
        android:label="@string/menu_accessstatus"
        tools:layout="@layout/fragment_access_status" >
        <action
            android:id="@+id/action_nav_accessstatus_to_nav_meterlocation"
            app:destination="@id/nav_meterlocation" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_meteraudit"
            android:id="@+id/action_nav_accessstatus_to_nav_meteraudit"
            app:destination="@id/nav_meteraudit" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_about"
            android:id="@+id/action_nav_accessstatus_to_nav_about"
            app:destination="@id/nav_about" />

    </fragment>
    <fragment
        android:id="@+id/nav_meterlocation"
        android:name="com.karebo2.teamapp.MeterLocation"
        android:label="@string/menu_accessstatus"
        tools:layout="@layout/fragment_meter_location" >
<!--        <action-->
<!--            android:id="@+id/action_nav_meterlocation_to_nav_barcodescan"-->
<!--            app:destination="@id/nav_barcodescan" />-->
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_meteraudit"
            android:id="@+id/action_nav_meterlocation_to_nav_meteraudit"
            app:destination="@id/nav_meteraudit" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_about"
            android:id="@+id/action_nav_meterlocation_to_nav_about"
            app:destination="@id/nav_about" />
        <action
            android:id="@+id/action_nav_meterlocation_to_nav_siteStart"
            app:destination="@id/nav_siteStart" />
    </fragment>




    <fragment
        android:id="@+id/nav_siteStart"
        android:name="com.karebo2.teamapp.SiteStart"
        android:label="@string/menu_siteStart"
        tools:layout="@layout/fragment_site_start" >

        <action
            android:id="@+id/action_nav_siteStart_to_nav_meterinstallation"
            app:destination="@id/nav_meterinstallation" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_meteraudit"
            android:id="@+id/action_nav_siteStart_to_nav_meteraudit"
            app:destination="@id/nav_meteraudit" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_about"
            android:id="@+id/action_nav_siteStart_to_nav_about"
            app:destination="@id/nav_about" />
    </fragment>
    <fragment
        android:id="@+id/nav_commissioningReport"
        android:name="com.karebo2.teamapp.CommissioningReport"
        android:label="@string/menu_commissioningReport"
        tools:layout="@layout/fragment_commissioning_report" >

        <action
            android:id="@+id/action_nav_commissioningReport_to_nav_updateSiteDetails"
            app:destination="@id/nav_updateSiteDetails" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_meteraudit"
            android:id="@+id/action_nav_commissioningReport_to_nav_meteraudit"
            app:destination="@id/nav_meteraudit" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_about"
            android:id="@+id/action_nav_commissioningReport_to_nav_about"
            app:destination="@id/nav_about" />
    </fragment>
    <fragment
        android:id="@+id/nav_meterinstallation"
        android:name="com.karebo2.teamapp.MeterInstallation"
        android:label="@string/menu_meterinstallation"
        tools:layout="@layout/fragment_meter_installation" >

        <action
            android:id="@+id/action_nav_meterinstallation_to_nav_commissioningReport"
            app:destination="@id/nav_commissioningReport" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_meteraudit"
            android:id="@+id/action_nav_meterinstallation_to_nav_meteraudit"
            app:destination="@id/nav_meteraudit" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_about"
            android:id="@+id/action_nav_meterinstallation_to_nav_about"
            app:destination="@id/nav_about" />
    </fragment>
    <fragment
        android:id="@+id/nav_updateSiteDetails"
        android:name="com.karebo2.teamapp.UpdateSiteDetails"
        android:label="@string/menu_updateSiteDetails"
        tools:layout="@layout/fragment_update_site_details" >

        <action
            android:id="@+id/action_nav_updateSiteDetails_to_nav_signOff"
            app:destination="@id/nav_signOff" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_meteraudit"
            android:id="@+id/action_nav_updateSiteDetails_to_nav_meteraudit"
            app:destination="@id/nav_meteraudit" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_about"
            android:id="@+id/action_nav_updateSiteDetails_to_nav_about"
            app:destination="@id/nav_about" />
    </fragment>

    <fragment
        android:id="@+id/nav_signOff"
        android:name="com.karebo2.teamapp.SignOff"
        android:label="@string/menu_signOff"
        tools:layout="@layout/fragment_sign_off" >

        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_accessstatus"
            android:id="@+id/action_nav_signOff_to_nav_accessstatus"
            app:destination="@id/nav_accessstatus" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_meteraudit"
            android:id="@+id/action_nav_signOff_to_nav_meteraudit"
            app:destination="@id/nav_meteraudit" />
        <action
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_about"
            android:id="@+id/action_nav_signOff_to_nav_about"
            app:destination="@id/nav_about" />

    </fragment>
</navigation>